<resources>
    <string name="app_name">ContaCliqueGleides</string>
    <string name="button_increment">Incrementa</string>
    <string name="minha_conta">Minha Conta</string>
    <string name="valor_acumulado">Valor Acumulado</string>
    <string name="entre_com_um_valor">Entre com um valor</string>
    <string name="valor">1000</string>
    <!-- Strings related to login -->
    <string name="user_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="proxima_tela">Proxima Tela</string>
    <string name="entre_com_um_nome">Entre com um nome</string>
    <string name="nome_pesquisado">Nome a ser pesquisado</string>
    <string name="drop_check">dropCheck</string>
    <string name="salvar">Salvar</string>
    <string name="informacao_da_conta">Informações da Conta</string>
</resources>